--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
+    <!-- Link to DayJS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -18,7 +24,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -27,6 +33,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <p id="currentHour" class="lead"></p>
     </header>
     <div class="container-lg px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
@@ -40,7 +47,7 @@
         -->
 
       <div id="hour-8" class="row time-block past">
-        <div class="col-2 col-md-1 hour text-center py-3">8AM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">8:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -49,7 +56,7 @@
 
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
       <div id="hour-9" class="row time-block past">
-        <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">9:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -58,7 +65,7 @@
 
       <!-- Example of a a present time block. The "present" class adds a red background color. -->
       <div id="hour-10" class="row time-block present">
-        <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">10:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -67,7 +74,7 @@
 
       <!-- Example of a future time block. The "future" class adds a green background color. -->
       <div id="hour-11" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">11:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -75,7 +82,7 @@
       </div>
 
       <div id="hour-12" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">12:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -83,7 +90,7 @@
       </div>
 
       <div id="hour-13" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">13:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -91,7 +98,7 @@
       </div>
 
       <div id="hour-14" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">14:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -99,7 +106,7 @@
       </div>
 
       <div id="hour-15" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">15:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -107,7 +114,7 @@
       </div>
 
       <div id="hour-16" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">16:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -115,7 +122,7 @@
       </div>
 
       <div id="hour-17" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">17:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -123,7 +130,7 @@
       </div>
 
       <div id="hour-18" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3">18:00</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -138,6 +145,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="./Assets/script.js"></script>
   </body>
 </html>
